2013-01-03  Stas Boukarev  <stassats@gmail.com>

	* slime-cl-indent.el (define-common-lisp-style "basic"): Don't set
	`comment-column' to NIL, it only can accept integers.

2012-12-26  Francois-Rene Rideau <tunes@google.com>

	* swank-asdf.lisp: Better support for different versions of ASDF.

2012-12-16  Helmut Eller  <heller@common-lisp.net>

	* swank-repl.lisp (thread-for-evaluation): Override some cases.

2012-11-28  Stas Boukarev  <stassats@gmail.com>

	* swank-asdf.lisp (asdf-system-directory): Return a namestring,
	not a pathname.

2012-11-23  Stas Boukarev  <stassats@gmail.com>

	* slime-repl.el (slime-repl-auto-right-margin):
	New variable, defaults to NIL.
	(slime-repl-eval-string): Respect the above variable.
	* swank-repl.lisp (listener-eval): New keyword parameter,
	window-width, if supplied binds *print-right-margin* to its
	value.
	Based on a patch by Marco Baringer.

2012-11-22  Stas Boukarev  <stassats@gmail.com>

	* slime-package-fu.el (slime-determine-symbol-style): Fix the
	default case when no :export symbols are present.
	Because of (every anything nil) => T.

2012-11-13  Francois-Rene Rideau <tunes@google.com>

	* swank-asdf.lisp: Better ASDF support.

2012-10-19  Stas Boukarev  <stassats@gmail.com>

	* slime-fuzzy.el (slime-fuzzy-choices-buffer): Don't move position
	in the current buffer, call (slime-fuzzy-next) after switching to
	the completion buffer.

2012-10-14  Helmut Eller  <heller@common-lisp.net>

	* swank-kawa.scm: Various tweaks.

2012-08-13  Stas Boukarev  <stassats@gmail.com>

	* swank-arglists.lisp (extra-keywords/slots): Check for
	slot-definition-initfunction being present before calling
	slot-definition-initform.

2012-08-04  Stas Boukarev  <stassats@gmail.com>

	* swank-arglists.lisp (test-print-arglist): bind
	*print-right-margin* to 1000 instead of NIL, because the default
	value on ABCL is less than the length of the tested arglist.

2012-05-23  Christophe Rhodes  <csr21@cantab.net>

	* swank-media.lisp: add provide.
